package org.com.app.enums;

public enum BotDifficultyLevel {
    EASY,
    MEDIUM,
    HARD,
}
