package org.com.app.enums;

public enum CellState {
    FILLED,
    EMPTY,
    BLOCKED,
}
