package org.com.app.enums;

public enum GameState {
    IN_PROGRESS,
    COMPLETED,
    DRAW,
}
