package org.com.app.enums;

public enum PlayerType {
    HUMAN,
    BOT,
}
