package org.com.app.strategies.botplayingstrategies;

import org.com.app.model.Board;
import org.com.app.model.Move;
import org.com.app.model.Player;

public class MediumBotPlayingStrategy implements BotPlayingStrategy {
    @Override
    public Move getMove(Board board, Player player) {
        //TODO::Implement getMove
        return new Move(null, null);
    }
}
